# lab11

./: .gitignore  CMakeLists.txt  build.sh
src/: database.c  database.h  login_frame.c  login_frame.h  main.c  main_frame.c  main_frame.h  table_template_frame.c  table_template_frame.h
ui/: login_window.ui  main_window.ui  main_window.ui~  table_template.ui
